kettle-service-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: kettle-service
  name: kettle-service
spec:
  replicas: 1
  selector:
    app: kettle-service
  strategy:
    resources: {}
  template:
    metadata:
      labels:
        app: kettle-service
    spec:
      containers:
      - image: registry.dataos.io/guestbook/kettle-service
        imagePullPolicy: Always
        name: kettle-service
        args:
        - /start.sh
        - #username#
        - #userpass#
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
  test: false
  triggers:
  - type: ConfigChange
status: {}
