kettle-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kettle-service
  name: kettle-service
spec:
  ports:
  - name: 8181-tcp
    port: 8181
    protocol: TCP
    targetPort: 8181
  selector:
    app: kettle-service
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
