kettle-service-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: kettle-service
  name: kettle-service
spec:
  host: kettle-service.app.dataos.io
  port:
    targetPort: 8181-tcp
  to:
    kind: Service
    name: kettle-service
status: {}
